# c-experiments

./: .gitignore  CMakeLists.txt  README.md
app/: README.md
app/chapter_01/: README.md
app/chapter_02/: README.md  byterep.c  pp_2.1.md  pp_2.2.md  pp_2.3.md  pp_2.4.md
at/: autodemo.sh
cpl/: README.md  cel2fahrs.c  countchars.c  countlines.c  fahr2.c  fahr2cels.c  get2put.c
mc/: README.md  getting-started  getting-started.c
oap/: README.md  simple.c
oap/chapter_01/: README.md
oap/chapter_02/: simple1.c  simple2.c  simple3.c  subdivision.c
sdl/: README.md
sdl/tutorial_01/src/: input.c  main.c
sdl/tutorial_02/src/: defs.h  main.c
sdl/tutorial_03/: makefile
sdl/tutorial_03/src/: defs.h  init.c  init.h  main.h
sdl/tutorial_04/src/: defs.h  draw.c  graphics.c  player.c  structs.h
sdl/tutorial_05/src/: defs.h  draw.c  main.c  structs.h
sdl/tutorial_06/src/: main.c  structs.h
sdl/tutorial_08/: makefile
sdl/tutorial_08/src/: animation.h  defs.h  init.c  main.c  main.h
sdl/tutorial_09/src/: main.c  main.h  stars.c  structs.h
sdl/tutorial_10/: makefile
sdl/tutorial_10/src/: animation.h  collisions.h  defs.h  entity.c  entity.h  init.c  main.c  rock.c  rock.h  structs.h
sdl/tutorial_11/: makefile
sdl/tutorial_12/: makefile
sdl/tutorial_12/src/: input.c  main.c  main.h  map.c  map.h  structs.h
sdl/tutorial_13/src/: cursor.c  defs.h  font.c  init.c  input.c  main.c  main.h  status.c  structs.h
sdl/tutorial_14/src/: collisions.c  collisions.h  draw.c  init.c  main.c  main.h  map.c  player.h  structs.h
sdl/tutorial_15/src/: animation.c  defs.h  graphics.c  init.c  main.c  main.h
sdl/tutorial_17/: makefile
sdl/tutorial_17/src/: defs.h  graphics.c  init.c  main.c
sdl/tutorial_18/src/: audio.c  init.c  main.h  redefine.h  structs.h
tcc/: README.md  first.c
tutorial/tutorial_01/src/: init.c
tutorial/tutorial_02/: makefile
tutorial/tutorial_02/src/: init.c  main.h
tutorial/tutorial_03/src/: audio.c  graphics.c  input.c  input.h  main.c
tutorial/tutorial_04/: makefile
tutorial/tutorial_04/src/: init.c  input.c  main.c  main.h
tutorial/tutorial_05/: makefile
tutorial/tutorial_05/src/: init.c
tutorial/tutorial_06/: makefile
tutorial/tutorial_06/src/: collisions.c  defs.h
tutorial/tutorial_08/src/: animation.c  graphics.c  init.h  structs.h
tutorial/tutorial_09/: makefile
tutorial/tutorial_09/src/: defs.h  init.c  stars.h
tutorial/tutorial_10/src/: animation.c  audio.c  collisions.c  draw.c  input.c  main.h  player.c  stars.c  stars.h
tutorial/tutorial_12/src/: defs.h  init.c
tutorial/tutorial_13/: makefile
tutorial/tutorial_13/src/: cursor.h  draw.c  init.h  map.c  status.h
tutorial/tutorial_14/: makefile
tutorial/tutorial_14/src/: defs.h  init.h  input.c  map.h  player.c
tutorial/tutorial_15/: makefile
tutorial/tutorial_15/src/: draw.c  input.c  player.c  player.h  structs.h
tutorial/tutorial_17/src/: input.c  structs.h
tutorial/tutorial_18/: makefile
tutorial/tutorial_18/src/: defs.h  main.c
var/: joystick.c  primes.c
