cmake_minimum_required(VERSION 3.15)
project(c_experiments)

set(CMAKE_CXX_STANDARD 14)

include_directories(app)
include_directories(cpl)
include_directories(sdl/tutorial_01/src)
include_directories(sdl/tutorial_02/src)
include_directories(sdl/tutorial_03/src)
include_directories(sdl/tutorial_04/src)
include_directories(sdl/tutorial_05/src)
include_directories(sdl/tutorial_06/src)
include_directories(sdl/tutorial_07/src)
include_directories(sdl/tutorial_08/src)
include_directories(sdl/tutorial_09/src)
include_directories(sdl/tutorial_10/src)
include_directories(sdl/tutorial_11/src)
include_directories(sdl/tutorial_12/src)
include_directories(sdl/tutorial_13/src)
include_directories(sdl/tutorial_14/src)
include_directories(sdl/tutorial_15/src)
include_directories(sdl/tutorial_17/src)
include_directories(sdl/tutorial_18/src)
include_directories(tcc)

add_executable(c_experiments
        app/chapter_02/byterep.c
        cpl/cel2fahrs.c
        cpl/countchars.c
        cpl/countlines.c
        cpl/fahr2.c
        cpl/fahr2cels.c
        cpl/get2put.c
        cpl/hello.c
        sdl/tutorial_01/src/defs.h
        sdl/tutorial_01/src/init.c
        sdl/tutorial_01/src/init.h
        sdl/tutorial_01/src/input.c
        sdl/tutorial_01/src/input.h
        sdl/tutorial_01/src/main.c
        sdl/tutorial_01/src/main.h
        sdl/tutorial_02/src/defs.h
        sdl/tutorial_02/src/graphics.c
        sdl/tutorial_02/src/graphics.h
        sdl/tutorial_02/src/init.c
        sdl/tutorial_02/src/init.h
        sdl/tutorial_02/src/input.c
        sdl/tutorial_02/src/input.h
        sdl/tutorial_02/src/main.c
        sdl/tutorial_02/src/main.h
        sdl/tutorial_03/src/audio.c
        sdl/tutorial_03/src/audio.h
        sdl/tutorial_03/src/defs.h
        sdl/tutorial_03/src/graphics.c
        sdl/tutorial_03/src/graphics.h
        sdl/tutorial_03/src/init.c
        sdl/tutorial_03/src/init.h
        sdl/tutorial_03/src/input.c
        sdl/tutorial_03/src/input.h
        sdl/tutorial_03/src/main.c
        sdl/tutorial_03/src/main.h
        sdl/tutorial_04/src/defs.h
        sdl/tutorial_04/src/draw.c
        sdl/tutorial_04/src/draw.h
        sdl/tutorial_04/src/graphics.c
        sdl/tutorial_04/src/graphics.h
        sdl/tutorial_04/src/init.c
        sdl/tutorial_04/src/init.h
        sdl/tutorial_04/src/input.c
        sdl/tutorial_04/src/input.h
        sdl/tutorial_04/src/main.c
        sdl/tutorial_04/src/main.h
        sdl/tutorial_04/src/player.c
        sdl/tutorial_04/src/player.h
        sdl/tutorial_04/src/structs.h
        sdl/tutorial_05/src/audio.c
        sdl/tutorial_05/src/audio.h
        sdl/tutorial_05/src/bullet.c
        sdl/tutorial_05/src/bullet.h
        sdl/tutorial_05/src/defs.h
        sdl/tutorial_05/src/draw.c
        sdl/tutorial_05/src/draw.h
        sdl/tutorial_05/src/entity.c
        sdl/tutorial_05/src/entity.h
        sdl/tutorial_05/src/graphics.c
        sdl/tutorial_05/src/graphics.h
        sdl/tutorial_05/src/init.c
        sdl/tutorial_05/src/init.h
        sdl/tutorial_05/src/input.c
        sdl/tutorial_05/src/input.h
        sdl/tutorial_05/src/main.c
        sdl/tutorial_05/src/main.h
        sdl/tutorial_05/src/player.c
        sdl/tutorial_05/src/player.h
        sdl/tutorial_05/src/structs.h
        sdl/tutorial_06/src/audio.c
        sdl/tutorial_06/src/audio.h
        sdl/tutorial_06/src/bullet.c
        sdl/tutorial_06/src/bullet.h
        sdl/tutorial_06/src/collisions.c
        sdl/tutorial_06/src/collisions.h
        sdl/tutorial_06/src/defs.h
        sdl/tutorial_06/src/draw.c
        sdl/tutorial_06/src/draw.h
        sdl/tutorial_06/src/entity.c
        sdl/tutorial_06/src/entity.h
        sdl/tutorial_06/src/graphics.c
        sdl/tutorial_06/src/graphics.h
        sdl/tutorial_06/src/init.c
        sdl/tutorial_06/src/init.h
        sdl/tutorial_06/src/input.c
        sdl/tutorial_06/src/input.h
        sdl/tutorial_06/src/main.c
        sdl/tutorial_06/src/main.h
        sdl/tutorial_06/src/player.c
        sdl/tutorial_06/src/player.h
        sdl/tutorial_06/src/structs.h
        sdl/tutorial_06/src/ufo.c
        sdl/tutorial_06/src/ufo.h
        sdl/tutorial_07/src/audio.c
        sdl/tutorial_07/src/audio.h
        sdl/tutorial_07/src/bullet.c
        sdl/tutorial_07/src/bullet.h
        sdl/tutorial_07/src/collisions.c
        sdl/tutorial_07/src/collisions.h
        sdl/tutorial_07/src/defs.h
        sdl/tutorial_07/src/draw.c
        sdl/tutorial_07/src/draw.h
        sdl/tutorial_07/src/entity.c
        sdl/tutorial_07/src/entity.h
        sdl/tutorial_07/src/font.c
        sdl/tutorial_07/src/font.h
        sdl/tutorial_07/src/graphics.c
        sdl/tutorial_07/src/graphics.h
        sdl/tutorial_07/src/init.c
        sdl/tutorial_07/src/init.h
        sdl/tutorial_07/src/input.c
        sdl/tutorial_07/src/input.h
        sdl/tutorial_07/src/main.c
        sdl/tutorial_07/src/main.h
        sdl/tutorial_07/src/player.c
        sdl/tutorial_07/src/player.h
        sdl/tutorial_07/src/structs.h
        sdl/tutorial_07/src/ufo.c
        sdl/tutorial_07/src/ufo.h
        sdl/tutorial_08/src/animation.c
        sdl/tutorial_08/src/animation.h
        sdl/tutorial_08/src/defs.h
        sdl/tutorial_08/src/graphics.c
        sdl/tutorial_08/src/graphics.h
        sdl/tutorial_08/src/init.c
        sdl/tutorial_08/src/init.h
        sdl/tutorial_08/src/input.c
        sdl/tutorial_08/src/input.h
        sdl/tutorial_08/src/main.c
        sdl/tutorial_08/src/main.h
        sdl/tutorial_08/src/structs.h
        sdl/tutorial_09/src/defs.h
        sdl/tutorial_09/src/init.c
        sdl/tutorial_09/src/init.h
        sdl/tutorial_09/src/input.c
        sdl/tutorial_09/src/input.h
        sdl/tutorial_09/src/main.c
        sdl/tutorial_09/src/main.h
        sdl/tutorial_09/src/stars.c
        sdl/tutorial_09/src/stars.h
        sdl/tutorial_09/src/structs.h
        sdl/tutorial_10/src/animation.c
        sdl/tutorial_10/src/animation.h
        sdl/tutorial_10/src/audio.c
        sdl/tutorial_10/src/audio.h
        sdl/tutorial_10/src/collisions.c
        sdl/tutorial_10/src/collisions.h
        sdl/tutorial_10/src/defs.h
        sdl/tutorial_10/src/draw.c
        sdl/tutorial_10/src/draw.h
        sdl/tutorial_10/src/entity.c
        sdl/tutorial_10/src/entity.h
        sdl/tutorial_10/src/font.c
        sdl/tutorial_10/src/font.h
        sdl/tutorial_10/src/graphics.c
        sdl/tutorial_10/src/graphics.h
        sdl/tutorial_10/src/init.c
        sdl/tutorial_10/src/init.h
        sdl/tutorial_10/src/input.c
        sdl/tutorial_10/src/input.h
        sdl/tutorial_10/src/main.c
        sdl/tutorial_10/src/main.h
        sdl/tutorial_10/src/player.c
        sdl/tutorial_10/src/player.h
        sdl/tutorial_10/src/rock.c
        sdl/tutorial_10/src/rock.h
        sdl/tutorial_10/src/stars.c
        sdl/tutorial_10/src/stars.h
        sdl/tutorial_10/src/structs.h
        sdl/tutorial_11/src/defs.h
        sdl/tutorial_11/src/draw.c
        sdl/tutorial_11/src/draw.h
        sdl/tutorial_11/src/graphics.c
        sdl/tutorial_11/src/graphics.h
        sdl/tutorial_11/src/init.c
        sdl/tutorial_11/src/init.h
        sdl/tutorial_11/src/input.c
        sdl/tutorial_11/src/input.h
        sdl/tutorial_11/src/main.c
        sdl/tutorial_11/src/main.h
        sdl/tutorial_11/src/map.c
        sdl/tutorial_11/src/map.h
        sdl/tutorial_11/src/structs.h
        sdl/tutorial_12/src/defs.h
        sdl/tutorial_12/src/draw.c
        sdl/tutorial_12/src/draw.h
        sdl/tutorial_12/src/graphics.c
        sdl/tutorial_12/src/graphics.h
        sdl/tutorial_12/src/init.c
        sdl/tutorial_12/src/init.h
        sdl/tutorial_12/src/input.c
        sdl/tutorial_12/src/input.h
        sdl/tutorial_12/src/main.c
        sdl/tutorial_12/src/main.h
        sdl/tutorial_12/src/map.c
        sdl/tutorial_12/src/map.h
        sdl/tutorial_12/src/structs.h
        sdl/tutorial_13/src/cursor.c
        sdl/tutorial_13/src/cursor.h
        sdl/tutorial_13/src/defs.h
        sdl/tutorial_13/src/draw.c
        sdl/tutorial_13/src/draw.h
        sdl/tutorial_13/src/font.c
        sdl/tutorial_13/src/font.h
        sdl/tutorial_13/src/graphics.c
        sdl/tutorial_13/src/graphics.h
        sdl/tutorial_13/src/init.c
        sdl/tutorial_13/src/init.h
        sdl/tutorial_13/src/input.c
        sdl/tutorial_13/src/input.h
        sdl/tutorial_13/src/main.c
        sdl/tutorial_13/src/main.h
        sdl/tutorial_13/src/map.c
        sdl/tutorial_13/src/map.h
        sdl/tutorial_13/src/status.c
        sdl/tutorial_13/src/status.h
        sdl/tutorial_13/src/structs.h
        sdl/tutorial_14/src/collisions.c
        sdl/tutorial_14/src/collisions.h
        sdl/tutorial_14/src/defs.h
        sdl/tutorial_14/src/draw.c
        sdl/tutorial_14/src/draw.h
        sdl/tutorial_14/src/graphics.c
        sdl/tutorial_14/src/graphics.h
        sdl/tutorial_14/src/init.c
        sdl/tutorial_14/src/init.h
        sdl/tutorial_14/src/input.c
        sdl/tutorial_14/src/input.h
        sdl/tutorial_14/src/main.c
        sdl/tutorial_14/src/main.h
        sdl/tutorial_14/src/map.c
        sdl/tutorial_14/src/map.h
        sdl/tutorial_14/src/player.c
        sdl/tutorial_14/src/player.h
        sdl/tutorial_14/src/structs.h
        sdl/tutorial_15/src/animation.c
        sdl/tutorial_15/src/animation.h
        sdl/tutorial_15/src/defs.h
        sdl/tutorial_15/src/draw.c
        sdl/tutorial_15/src/draw.h
        sdl/tutorial_15/src/graphics.c
        sdl/tutorial_15/src/graphics.h
        sdl/tutorial_15/src/init.c
        sdl/tutorial_15/src/init.h
        sdl/tutorial_15/src/input.c
        sdl/tutorial_15/src/input.h
        sdl/tutorial_15/src/main.c
        sdl/tutorial_15/src/main.h
        sdl/tutorial_15/src/player.c
        sdl/tutorial_15/src/player.h
        sdl/tutorial_15/src/structs.h
        sdl/tutorial_17/src/audio.c
        sdl/tutorial_17/src/audio.h
        sdl/tutorial_17/src/bullet.c
        sdl/tutorial_17/src/bullet.h
        sdl/tutorial_17/src/defs.h
        sdl/tutorial_17/src/draw.c
        sdl/tutorial_17/src/draw.h
        sdl/tutorial_17/src/entity.c
        sdl/tutorial_17/src/entity.h
        sdl/tutorial_17/src/graphics.c
        sdl/tutorial_17/src/graphics.h
        sdl/tutorial_17/src/init.c
        sdl/tutorial_17/src/init.h
        sdl/tutorial_17/src/input.c
        sdl/tutorial_17/src/input.h
        sdl/tutorial_17/src/main.c
        sdl/tutorial_17/src/main.h
        sdl/tutorial_17/src/player.c
        sdl/tutorial_17/src/player.h
        sdl/tutorial_17/src/structs.h
        sdl/tutorial_18/src/audio.c
        sdl/tutorial_18/src/audio.h
        sdl/tutorial_18/src/bullet.c
        sdl/tutorial_18/src/bullet.h
        sdl/tutorial_18/src/collisions.c
        sdl/tutorial_18/src/collisions.h
        sdl/tutorial_18/src/defs.h
        sdl/tutorial_18/src/draw.c
        sdl/tutorial_18/src/draw.h
        sdl/tutorial_18/src/entity.c
        sdl/tutorial_18/src/entity.h
        sdl/tutorial_18/src/font.c
        sdl/tutorial_18/src/font.h
        sdl/tutorial_18/src/graphics.c
        sdl/tutorial_18/src/graphics.h
        sdl/tutorial_18/src/init.c
        sdl/tutorial_18/src/init.h
        sdl/tutorial_18/src/input.c
        sdl/tutorial_18/src/input.h
        sdl/tutorial_18/src/main.c
        sdl/tutorial_18/src/main.h
        sdl/tutorial_18/src/player.c
        sdl/tutorial_18/src/player.h
        sdl/tutorial_18/src/redefine.c
        sdl/tutorial_18/src/redefine.h
        sdl/tutorial_18/src/structs.h
        sdl/tutorial_18/src/ufo.c
        sdl/tutorial_18/src/ufo.h
        tcc/first.c
        README.md)
