cmake_minimum_required(VERSION 3.11)
project(c_experiments)

set(CMAKE_CXX_STANDARD 14)

include_directories(app)
include_directories(cpl)
include_directories(mc)
include_directories(oap)
include_directories(tcc)

add_executable(byterep app/chapter_02/byterep.c)
add_executable(cel2fahrs cpl/cel2fahrs.c)
add_executable(countchars cpl/countchars.c)
add_executable(countlines cpl/countlines.c)
add_executable(fahr2 cpl/fahr2.c)
add_executable(fahrs2cels cpl/fahr2cels.c)
add_executable(first tcc/first.c)
add_executable(get2put cpl/get2put.c)
add_executable(getting-started mc/getting-started.c)
add_executable(hello cpl/hello.c)
add_executable(joystick var/joystick.c)
add_executable(simple oap/simple.c)
target_link_libraries(simple GL GLU glut)
